--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "start-server": "nodemon server.js"
+    "start-server": "nodemon server.js",
+    "start-client": "npm start --prefix client",
+    "dev": "concurrently \"npm run start-server\" \"npm run start-client\""
   },
   "author": "Gerard Homsi",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.0.5"
+    "express-validator": "^7.0.1",
+    "mongoose": "^7.0.5",
+    "nodemon": "^2.0.22"
   },
   "devDependencies": {
+    "concurrently": "^8.0.1",
     "eslint": "^8.39.0",
-    "eslint-plugin-react": "^7.32.2"
+    "eslint-plugin-react": "^7.32.2",
+    "morgan": "^1.10.0"
   }
 }
